--- a/index.html
+++ b/index.html
@@ -507,12 +507,8 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 	        />
 		   
 	    </div>
-		<a
-                type="submit" value="Submit"
-                class="main-btn border-btn btn-hover wow fadeInUp"
-                data-wow-delay=".6s"
-                > </a>
-                <button type="submit" value="Submit" class="btn-hover main-btn border-btn wow fadeInUp">
+		
+                <button type="submit" value="Submit" class="btn-hover">
                   Submit Now
                 </button>
 	      </form>
