--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   A Perfect Choice for who Choose Much Better
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Our educational program is an ideal choice
+                  Our educational program is an ideal choicebordwow
                   for students who are committed to achieving
                   academic excellence and strive to be their
                   very best. With our experienced instructors,
@@ -508,7 +508,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		   
 	    </div>
 		
-                <button type="submit" value="Submit" class="btn-hover">
+                <button type="submit" value="Submit">
                   Submit Now
                 </button>
 	      </form>
