--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
 <style>
+	
+.main-btn- {
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 18px 38px;
+  font-size: 18px;
+  border-radius: 50px;
+  color: #000000;
+  cursor: pointer;
+  z-index: 5;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  border: none;
+  background: #5864FF;
+  overflow: hidden;
+}
+
 
 </style>
  </head>
@@ -508,7 +532,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		   
 	    </div>
 		
-                <button type="submit" value="Submit">
+                <button type="submit" value="Submit" class="main-btn-">
                   Submit Now
                 </button>
 	      </form>
