--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   padding: 18px 38px;
   font-size: 18px;
   border-radius: 50px;
-  color: #000000;
+  color: #121212;
   cursor: pointer;
   z-index: 5;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
-  border: none;
+  border: #fff;
   background: #5864FF;
   overflow: hidden;
 }
