--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   padding: 18px 38px;
   font-size: 18px;
   border-radius: 50px;
-  color: #121212;
+  color: #fff;
   cursor: pointer;
   z-index: 5;
   -webkit-transition: all 0.4s ease-in-out;
