--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   z-index: 5;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
-  border: #fff;
+  border:5px #fff;
   background: #5864FF;
   overflow: hidden;
 }
