--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   z-index: 5;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
-  border:5px #fff;
+  border-width:5px;
+  border-style:solid;
+  border-color:#fff;
   background: #5864FF;
   overflow: hidden;
 }
