--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		   
 	    </div>
 		
-                <button type="submit" value="Submit" class="main-btn-">
+                <button type="submit" value="Submit" class="main-btn- btn-hover">
                   Submit Now
                 </button>
 	      </form>
