--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  placeholder="Enter Your Name"
 		  type="text"
 		  name="name"
+		  required
 		/>
   	  <span class="error"><br />
 	  <?php echo $nameErr;?></span>
@@ -523,7 +524,8 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		<input 
 		  type="text" 
 		  name="mail"
-		  placeholder="Enter Your Email"     
+		  placeholder="Enter Your Email" 
+		  required
 	        />
  	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>
