--- a/index.html
+++ b/index.html
@@ -530,18 +530,21 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 	        />
  	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>
+		      
+	<label for="feedback_1">Subject</label>	      
 	        <input 
 		  name="subject_1"
 		  type="textarea" 
 		  placeholder="To Contact Office"    
 		  readonly
-	        />	      
+	        />
+	
 		<input 
 		  name="feedback_1"
 		  type="textarea" 
 		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
 	        />
-		   
+		   <br />
 	    </div>
 		
                 <button type="submit" value="Submit" class="main-btn- btn-hover">
