--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6">ur Whatsapp Number,Name, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More
               <div class="single-feature-extended">
                 <div class="icon">
                   <i class="lni lni-quora"></i>
@@ -540,7 +540,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		  placeholder="To Contact Office"    
 		  readonly
 	        />
-	
+	<br />
 		<input 
 		  name="feedback_1"
 		  type="textarea" 
