--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   z-index: 5;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
-  border-width:3.5px;
+  border-width:3px;
   border-style:solid;
   border-color:#fff;
   background: #5864FF;
   overflow: hidden;
 }
 label{
-  text-color: #fff;
+  color: #fff;
 }
 
 </style>
