--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
               <div class="section-title mb-15">
                 <h2 class="text-white mb-25">Request To Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-                  Enter Your Whatsapp Number,Name, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More
+                  Enter Your Whatsapp Number,Name, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More(For Sending An E-Mail)
                 </p>
               </div>
             </div>
