--- a/index.html
+++ b/index.html
@@ -44,37 +44,12 @@
   border-style:solid;
   border-color:#fff;
   background: #5864FF;
-  overflow: hidden;
+  overflow: auto;
 }
 label{
   color: #fff;
 }
 
-.btn-continue span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-
-.btn-continue span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.btn-continue:hover span {
-  padding-right: 25px;
-}
-
-.btn-continue:hover span:after {
-  opacity: 1;
-  right: 0;
-	
-	
 	
 </style>
  </head>
@@ -150,7 +125,7 @@ function test_input($data) {
         </div>
       </div>
     </div>
-    <!-- preloader end -->
+    <!-- preloader end -->hidden
 
     <!-- ======== header start ======== -->
     <header class="header">
@@ -441,7 +416,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
           </div>
         </div>
       </div>
-    </section>
+    </section>main-btn-
     <!-- ======== about-section end ======== -->
 
     <!-- ======== about2-section start ======== -->
@@ -576,7 +551,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		   <br />
 	    </div>
 		
-                <button  class="main-btn- btn-continue">
+                <button  class="btn-continue btn-hover">
                   Submit Now
                 </button>
 	      </form>
@@ -650,15 +625,15 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   <li><a href="javascript:void(0)" onclick="href='#simple'">Simple</a></li>
                 </ul>
               </div>
-            </div>
+            </div> 
 
             <div class="col-xl-3 col-lg-3 col-md-6">
               <div class="footer-widget">
                 <h3>About Creators</h3>
                 <ul class="links">
-                  <li><a href="jvascript:void(0)">Follow Us</a></li>
-                  <li><a href="jvascript:void(0)" onclick="window.open('https://texidomeg.ml')">Official website</a></li>
-                  <li><a href="jvascript:void(0)" onclick="window.open('assets/thank_you.html')">Contact Us</a></li>
+                  <li><a href="javascript:void(0)">Follow Us</a></li>
+                  <li><a href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')">Official website</a></li>
+                  <li><a href="javascript:void(0)" onclick="window.open('assets/thank_you.html')">Contact Us</a></li>
                 </ul>
               </div>
             </div>
