--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   border-style:solid;
   border-color:#fff;
   background: #5864FF;
-  overflow: auto;
+  overflow: hidden;
 }
 label{
   color: #fff;
