--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ function test_input($data) {
         </div>
       </div>
     </div>
-    <!-- preloader end -->hidden
+    <!-- preloader end -->
 
     <!-- ======== header start ======== -->
     <header class="header">
@@ -183,7 +183,7 @@ function test_input($data) {
       <!-- navbar area -->
     </header>
     <!-- ======== header end ======== -->
-
+hidden
     <!-- ======== hero-section start ======== -->
     <section id="home" class="hero-section">
       <div class="container">
@@ -416,7 +416,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
           </div>
         </div>
       </div>
-    </section>main-btn-
+    </section>
     <!-- ======== about-section end ======== -->
 
     <!-- ======== about2-section start ======== -->
