--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 		 <br />
 		 <br />
 		<input 
+		  class="txt-area-sbcrb-form"
 		  name="feedback_1"
 		  type="textarea" 
 		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
