--- a/assets/get_contact.html
+++ b/assets/get_contact.html
@@ -102,33 +102,6 @@ function test_input($data) {
     </header>
     <!-- ======== header end ======== -->
 
-    <!-- ======== hero-section start ======== -->
-    <section id="home" class="hero-section">
-      <div class="container">
-        <div class="row align-items-center position-relative">
-          <div class="col-lg-6">
-            <div class="hero-content">
-              <h1 class="wow fadeInUp" data-wow-delay=".4s">
-		You Have Successfully Submitted
-	      </h1> 
-              <p class="wow fadeInUp" data-wow-delay=".6s">
-                Download our application for all free and premium features
-              </p>
-              <a
-                href="javascript:void(0)" onclick="alert('The Site Under Devolpment')"
-                class="main-btn border-btn btn-hover wow fadeInUp"
-                data-wow-delay=".6s"
-                >Download Now</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ======== hero-section end ======== -->
-
-
-
     <!-- ======== subscribe-section start ======== -->
     <section id="contact" class="subscribe-section pt-120">
       <div class="container">
@@ -136,15 +109,65 @@ function test_input($data) {
           <div class="row align-items-center">
             <div class="col-xl-6 col-lg-7">
               <div class="section-title mb-15">
-                <h2 class="text-white mb-25">Join Our Broadcast Group</h2>
+                <h2 class="text-white mb-25">Request To Join Our Broadcast Group</h2>
                 <p class="text-white pr-5">
-		You Have SuccessFully Submitted The Following Datas
-		</p>
+                  Enter Your Whatsapp Number,Name, E-Mail Id And Feedback(Optinal) To Join Our Broadcast Group And Know More(For Sending An E-Mail)
+                </p>
               </div>
             </div>
+		  
             <div class="col-xl-6 col-lg-5">
-<?php echo $phone; ?>
-            </div>
+              <form  class="subscribe-form" method="post" action="submit.php">
+                <input
+		  name="phone_1"
+		  id="subs-phone"
+                  type="tel"
+                  placeholder="Your 10 Digit No(eg:9037140240)"
+		  pattern="[0-9]{10}"
+		  required
+                />
+		      <br />
+		      <br />
+		<input
+		  placeholder="Enter Your Name"
+		  type="text"
+		  name="name_1"
+		  required
+		/>
+  	  <span class="error"><br />
+	  <?php echo $nameErr;?></span>
+  
+		<input
+		  type="text" 
+		  name="mail_1"
+		  placeholder="Enter Your Email"
+		  required
+	        />
+ 	   <span class="error"><br />
+	   <?php echo $mailErr; ?></span>
+		      <br />
+	<label for="feedback_1">Subject</label>
+	        <input
+		  name="subject_1"
+		  type="textarea"
+		  placeholder="To Contact Office"
+		  readonly
+	        />
+		 <br />
+		 <br />
+		<input 
+		  class="txt-area-sbcrb-form"
+		  name="feedback_1"
+		  type="textarea" 
+		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
+	        />
+		   <br />
+	    </div>
+		
+                <button  class="btn-continue btn-hover">
+                  Submit Now
+                </button>
+	      </form>
           </div>
         </div>
       </div>
