--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <ul class="links">
                   <li><a href="javascript:void(0)">Follow Us</a></li>
                   <li><a href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')">Official website</a></li>
-                  <li><a href="javascript:void(0)" onclick="window.open('assets/thank_you.html')">Contact Us</a></li>
+                  <li><a href="javascript:void(0)" onclick="window.open('assets/get_contact.html')">Contact Us</a></li>
                 </ul>
               </div>
             </div>
