--- a/assets/get_contact.html
+++ b/assets/get_contact.html
@@ -12,13 +12,43 @@
     />
     <!-- Place favicon.ico in the root directory -->
 
-    <!-- ======== CSS here ======== -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/lineicons.css" />
-    <link rel="stylesheet" href="css/animate.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/lineicons.css" />
+    <link rel="stylesheet" href="assets/css/animate.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 <style>
+	
+.btn-continue {
+  display: inline-block;
+  font-weight: 700;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 18px 38px;
+  font-size: 18px;
+  border-radius: 20px;
+  color: #fff;
+  cursor: pointer;
+  z-index: 5;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  border-width:3px;
+  border-style:solid;
+  border-color:#fff;
+  background: #5864FF;
+  overflow: hidden;
+}
+label{
+  color: #fff;
+}
 
+txt-area-sbcrb-form {
+  height:auto;	
+}
 </style>
  </head>
   <body>
@@ -77,6 +107,25 @@ function test_input($data) {
     <!-- preloader end -->
 
     <!-- ======== header start ======== -->
+   <div class="preloader">
+      <div class="loader">
+        <div class="spinner">
+          <div class="spinner-container">
+            <div class="spinner-rotator">
+              <div class="spinner-left">
+                <div class="spinner-circle"></div>
+              </div>
+              <div class="spinner-right">
+                <div class="spinner-circle"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- preloader end -->
+
+    <!-- ======== header start ======== -->
     <header class="header">
       <div class="navbar-area">
         <div class="container">
@@ -84,10 +133,41 @@ function test_input($data) {
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                  <img src="img/logo/logo-1.svg
+                  <img src="assets/img/logo/logo-1.svg
 " alt="Logo" />
                 </a>
-               
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="toggler-icon"></span>
+                  <span class="toggler-icon"></span>
+                  <span class="toggler-icon"></span>
+                </button>
+
+                <div
+                  class="collapse navbar-collapse sub-menu-bar"
+                  id="navbarSupportedContent"
+                >
+                  <ul id="nav" class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                      <a class="page-scroll active" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="page-scroll" href="#features">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="page-scroll" href="#why">Why Us</a>
+                    </li>
+		    <li class="nav-item">
+                      <a class="page-scroll" href="#abou">About</a>
+                    </li>
+                  </ul>
                 </div>
                 <!-- navbar collapse -->
               </nav>
