--- a/index.html
+++ b/index.html
@@ -46,14 +46,6 @@
   background: #5864FF;
   overflow: hidden;
 }
-label{
-  color: #fff;
-}
-
-txt-area-sbcrb-form {
-  height:auto;	
-}
-	
 </style>
  </head>
   <body>
@@ -507,57 +499,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             </div>
 		  
             <div class="col-xl-6 col-lg-5">
-              <form  class="subscribe-form" method="post" action="submit.php">
-                <input
-		  name="phone_1"
-		  id="subs-phone"
-                  type="tel"
-                  placeholder="Your 10 Digit No(eg:9037140240)"
-		  pattern="[0-9]{10}"
-		  required
-                />
-		      <br />
-		      <br />
-		<input
-		  placeholder="Enter Your Name"
-		  type="text"
-		  name="name_1"
-		  required
-		/>
-  	  <span class="error"><br />
-	  <?php echo $nameErr;?></span>
-  
-		<input
-		  type="text" 
-		  name="mail_1"
-		  placeholder="Enter Your Email"
-		  required
-	        />
- 	   <span class="error"><br />
-	   <?php echo $mailErr; ?></span>
-		      <br />
-	<label for="feedback_1">Subject</label>
-	        <input
-		  name="subject_1"
-		  type="textarea"
-		  placeholder="To Contact Office"
-		  readonly
-	        />
-		 <br />
-		 <br />
-		<input 
-		  class="txt-area-sbcrb-form"
-		  name="feedback_1"
-		  type="textarea" 
-		  placeholder="Enter Your Feedback Or Suggestion (optional)"     
-	        />
-		   <br />
-	    </div>
-		
-                <button  class="btn-continue btn-hover">
+                <button  class="btn-continue btn-hover" href=assets/get_contact.html>
                   Submit Now
                 </button>
-	      </form>
           </div>
         </div>
       </div>
