--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             </div>
 		  
             <div class="col-xl-6 col-lg-5">
-                <button  class="btn-continue btn-hover" href="assets/get_contact.html" >
+                <button  class="btn-continue btn-hover" onclick="window.location.href = 'assets/get_contact.html';" >
                   Submit Now
                 </button>
           </div>
