--- a/assets/get_contact.html
+++ b/assets/get_contact.html
@@ -199,7 +199,7 @@ txt-area-sbcrb-form {
  	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>
 		      <br />
-	<label for="feedback_1">Subject</label>
+	<label >Subject</label>
 	        <input
 		  name="subject_1"
 		  type="textarea"
