--- a/assets/get_contact.html
+++ b/assets/get_contact.html
@@ -199,8 +199,9 @@ txt-area-sbcrb-form {
  	   <span class="error"><br />
 	   <?php echo $mailErr; ?></span>
 		      <br />
-	<label >Subject</label>
+	<label for="feed" >Subject</label>
 	        <input
+		  id="feed"
 		  name="subject_1"
 		  type="textarea"
 		  placeholder="To Contact Office"
