--- a/assets/get_contact.html
+++ b/assets/get_contact.html
@@ -11,7 +11,7 @@
       href="img/favicon.png"
     />
     <!-- Place favicon.ico in the root directory -->
-
+ <link rel="stylesheet" href="css/main.css" />
     
 <style>
 	
