Eda Download Add aki index.html

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ function test_input($data) {
                 Download our application for all free and premium features
               </p>
               <a
-                href="https://firebasestorage.googleapis.com/v0/b/candle-pro.appspot.com/o/Candle.apk?alt=media&token=e414c6d8-e68e-4c1f-93cf-f30f911c42a2&_gl=1*1rdrd5s*_ga*MTY2MjA5NTc1OS4xNjc1NzYzOTUx*_ga_CW55HF8NVT*MTY4NTY0NTYzMC4xOC4xLjE2ODU2NDYyMTAuMC4wLjA." onclick="alert('Download Application')"
+                href="https://firebasestorage.googleapis.com/v0/b/candle-pro.appspot.com/o/Candle.apk?alt=media&token=e414c6d8-e68e-4c1f-93cf-f30f911c42a2&_gl=1*1rdrd5s*_ga*MTY2MjA5NTc1OS4xNjc1NzYzOTUx*_ga_CW55HF8NVT*MTY4NTY0NTYzMC4xOC4xLjE2ODU2NDYyMTAuMC4wLjA." onclick="alert(' Want to Download Application?. Also Contact Us If Application Can't Download')"
                 class="main-btn border-btn btn-hover wow fadeInUp"
                 data-wow-delay=".6s"
                 >Download Now</a
